--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
   <head>
     <meta charset="utf-8">
     <script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
     <title>Personal WebSite</title>
   </head>
   <body>
 <div class="box">
-  <img src="profile.jpg" alt="" class="box-img">
+  <img src="ashwani.jpg" alt="" class="box-img">
   <h1>
-DarkCode</h1>
+Ashwani Thakur</h1>
 <h5>
-Web Devloper - Web Designer</h5>
+Software Engineer</h5>
 <p>
-A web developer is a programmer who specializes in, or is specifically engaged in, the development of World Wide Web applications, or applications that are run over HTTP from a web server to a web browser.</p>
+Short description about me</p>
 <ul>
-<li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
-<li><a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
-<li><a href="#"><i class="fa fa-google-plus-square" aria-hidden="true"></i></a></li>
+<li><a href="https://www.facebook.com/thakurashwani18"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+<li><a href="https://twitter.com/ashwanitr001"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
+
 </ul>
 </div>
 </body>
