--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </p>
           <img src="text.svg" alt="" />
           <video autoplay muted loop class="video-background">
-            <source src="bg.mp4" type="video/mp4" />
+            <source src="video.mp4" type="video/mp4" />
           </video>
         </div>
 
