--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       name="description"
       content="Free website templates that are showcased here are open source, creative commons or totally free. These free CSS-HTML templates can be freely used personally or commercial | Bybu.cc"
     />
-    <title>Free Portfolio Template | HTML5-CSS - BYBU.CC</title>
-    <link rel="shortcut icon" href="favicon.ico" />
-    <meta name="author" content="Bybu.cc" />
+    <title>Ashwani</title>
+    <link rel="shortcut icon" href="a_logo.png"/>
+    <meta name="author" content="Ashwani"/>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
