--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="main-bybu">
       <aside>
         <div class="brand">
-          <img src="logo.png" />
+          <img src="a_logo.png" />
           BYBU
         </div>
         <div class="links">
