--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     />
   </head>
   <body>
-    <div class="main-bybu">
+    <div class="superhero">
       <aside>
         <div class="brand">
           <img src="a_logo.png" />
-          BYBU
+          Home
         </div>
         <div class="links">
           <a href="#intro">
@@ -64,7 +64,7 @@
           </p>
           <img src="text.svg" alt="" />
           <video autoplay muted loop class="video-background">
-            <source src="video.mp4" type="video/mp4" />
+            <source src="video1.mp4" type="video/mp4" />
           </video>
         </div>
 
