--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 layout: default
 ---
 
+
+
+<!-- above here adding new changes -->
 <div class="home-page">
   <img class="photo" src="https://avatars2.githubusercontent.com/u/42508662?s=400&u=b21cae0e7c20898b36f427055d1d74723c664874&v=4" height="150" >
   <h2>Hello World!</h2>
