--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 <div class="home-page">
   <img class="photo" src="https://avatars2.githubusercontent.com/u/42508662?s=400&u=b21cae0e7c20898b36f427055d1d74723c664874&v=4" height="150" >
   <h2>Hello World!</h2>
-  <p>I am Ashwani, I love Programming, music, cricket and desserts.</p>
+  <p>I'm a software engineer and an ardent learner. </p>
 
   <p class="work">
     
@@ -23,14 +23,14 @@ layout: default
     <a href="mailto: {{site.email}}">
       <span>{% include icons/mail.svg %}</span>
     </a>
-    <a href="{{ site.link_to.twitter }}">
+    <a target="_blank" href="{{ site.link_to.twitter }}">
       <span>{% include icons/twitter.svg %}</span>
     </a>
    
-    <a href="{{ site.link_to.linkedin }}">
+    <a target="_blank" href="{{ site.link_to.linkedin }}">
       <span>{% include icons/linkedin.svg %}</span>
     </a>
-    <a href="https://stackoverflow.com/users/10424859/ashwani">
+    <a target="_blank" href="https://stackoverflow.com/users/10424859/ashwani">
       <span>{% include icons/stackoverflow.svg %}</span>
     </a>
   </p>
