removed unnecessary code

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ canvas {
     left:0
 }
   </style>
-  <script>
+  <!-- <script>
       (function () {
       var requestAnimationFrame = window.requestAnimationFrame || window.mozRequestAnimationFrame || window.webkitRequestAnimationFrame || window.msRequestAnimationFrame || function (callback) {
               window.setTimeout(callback, 1000 / 60);
@@ -194,6 +194,6 @@ entities.push(new Terrain({displacement : 120, scrollDelay : 50, fillStyle : "rg
       requestAnimationFrame(animate);
   }
   animate();
-    </script>
+    </script> -->
 
 <!-- above here adding new changes -->
